<?xml version="1.0"?>
<package format="3">
  <name>rf_sensor</name>
  <version>0.0.1</version>
  <description>RF Sensor package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>gz-sim8</depend>
  <depend>gz-transport13</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
